--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
