--- a/package.json
+++ b/package.json
@@ -7,26 +7,24 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
-    "express": "~4.16.1",
+    "express": "^4.17.2",
     "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
-    "http-errors": "^1.6.3",
-    "morgan": "~1.9.1",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
-    "passport": "^0.5.0",
+    "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11",
-    "sequelize": "^6.12.0-beta.1",
-    "session-file-store": "^1.5.0"
-  },
-  "devDependencies": {
+    "pug": "^3.0.2",
+    "sequelize": "^6.12.0",
+    "session-file-store": "^1.5.0",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.2.0"
+    "swagger-ui-express": "^4.3.0"
   }
 }
